mono (6.12.0.114-0labft7~rc2) UNRELEASED; urgency=medium

  * Объединены пакеты mono-runtime-common и mono-runtime.
  * Уровень debhelper повышен до 10.
  * Возвращен пакет mono-jay.
  * Обработка профилей nodoc, cert.
  * Использование системного заголовочного файла zlib.h.

 -- Лаборатория 50 <team@lab50.net>  Sat, 13 Feb 2021 10:57:40 +0300

mono (6.12.0.114-0labft6) testing; urgency=medium

  * Пакеты libmonosgen* объединены с libmono*.
  * Пакет mono-runtime-sgen объединен с mono-runtime.

 -- Лаборатория 50 <team@lab50.net>  Thu, 21 Jan 2021 20:58:51 +0300

mono (6.12.0.114-0labft5) testing; urgency=medium

  * Исправлены права на файл в runtime.d.

 -- Лаборатория 50 <team@lab50.net>  Thu, 21 Jan 2021 17:48:25 +0300

mono (6.12.0.114-0labft4) testing; urgency=medium

  * Использование ERR_print_errors вместо BIO_print_errors.

 -- Лаборатория 50 <team@lab50.net>  Thu, 21 Jan 2021 16:10:27 +0300

mono (6.12.0.114-0labft3) testing; urgency=medium

  * Установка файлов перенесена из rules в *.install.
  * Сборка с mono-microsoft-net-compilers-toolset или mono-roslyn.
  * Сборка с mono-reference-assemblies-cil или mono-devel.
  * Удалены файлы /usr/lib/mono/4.5/Facades из mono-devel.

 -- Лаборатория 50 <team@lab50.net>  Mon, 18 Jan 2021 19:07:36 +0300

mono (6.12.0.114-0labft1) testing; urgency=medium

  * New upstream version.

 -- Лаборатория 50 <team@lab50.net>  Thu, 14 Jan 2021 15:48:17 +0300

mono (6.12.0.112-0labft2) testing; urgency=medium

  * Initial release.
  * Dist clean pdb and exe files.
  * Добавлены недостающие файлы тестовых утилит.
  * Use system OpenSSL instead of BoringTLS.
  * Dropped deprecated MCS compiler.
  * Dropped deprecated XBuild.
  * Сборка с помощью внешней утилиты jay.

 -- Лаборатория 50 <team@lab50.net>  Fri, 18 Dec 2020 08:54:59 +0300